--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="shortcut icon" type="image/x-icon" href="https://unpkg.byted-static.com/latest/byted/arco-config/assets/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vue Admin Arco - 开箱即用的中台前端/设计解决方案</title>
+    <title>智慧冷链管理平台</title>
   </head>
   <body>
     <div id="app"></div>
